<?xml version="1.0"?>
<package format="2">
    <name>bar30_depth</name>
    <version>0.0.1</version>
    <description>The Bar30 depth sensor ROS driver</description>
    <maintainer email="jwang92@stevens.edu">Jinkun Wang</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/RobustFieldAutonomyLab/bluerov</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
</package>