<?xml version="1.0"?>
<package>
  <name>bluerov_control</name>
  <version>0.0.0</version>
  <description>blue_rov_local_planner</description>

  <maintainer email="tshan3@stevens.edu">Tixiao Shan</maintainer>

  <license>TODO</license>

  <author >Tixiao Shan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>ros_bridge</build_depend>
  <run_depend>ros_bridge</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensors_msgs</build_depend>
  <run_depend>sensors_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>pluginlib</run_depend>
  <build_depend>nav_core</build_depend>
  <run_depend>nav_core</run_depend>

  <export>
    <nav_core plugin="${prefix}/src/bluerov_planner_plugin.xml" />
  </export>

</package>
