<?xml version="1.0"?>
<package>
  <name>sonar_oculus</name>
  <version>1.0.0</version>
  <description>The sonar_oculus package</description>
  <maintainer email="vsieben@slb.com">Vincent Sieben</maintainer>
  <maintainer email="pvt@mit.edu">Pedro Vaz Teixeira</maintainer>
  <maintainer email="jwang92@stevens.edu">Jinkun Wang</maintainer>
  <license>Schlumberger retains all rights and privledges</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
